# dough-studio-rust-be

./: Cargo.toml
src/: controllers.rs  helper.rs  main.rs  mod.rs  models.rs  query.rs  schema.rs
src/consumers/: consumer.rs  product_consumer.rs
src/controllers/: controller.rs  products_controller.rs  root_controller.rs
src/helper/: graphql_helper.rs
src/models/: products_models.rs  root_models.rs
src/repository/: products_repository.rs
src/types/: product.rs
