[package]
name = "dough-studio-rust-be"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
axum = "0.8.4"
config = "0.15.13"
dotenvy = "0.15.7"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = "1.46.1"
tracing-subscriber = "0.3.19"
